add suod to Dockerfile_kubespray

--- a/Dockerfile_kubespray
+++ b/Dockerfile_kubespray
@@ -3,7 +3,7 @@ FROM ubuntu:16.04
 RUN mkdir /kubespray
 WORKDIR /kubespray
 RUN apt update -y && \
-  apt install -y \
+  apt install -y sudo \
   libssl-dev python-dev sshpass apt-transport-https \
   ca-certificates curl gnupg2 software-properties-common python-pip
 RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - && \
