--- a/Dockerfile_kubespray
+++ b/Dockerfile_kubespray
@@ -1,17 +1,35 @@
 FROM ubuntu:16.04
 
+# Helm
+ARG HELM_VERSION=v2.12.3
+ENV HELM_URL https://storage.googleapis.com/kubernetes-helm/helm-${HELM_VERSION}-linux-amd64.tar.gz
+
+RUN curl -Lo /tmp/helm.tar.gz ${HELM_URL} \
+  && tar -zxvf /tmp/helm.tar.gz -C /tmp \
+  && mv /tmp/linux-amd64/helm /usr/bin/helm \
+  && rm -rf /tmp/*
+# Helm
+
+# Kubespray
 RUN mkdir /kubespray
+
 WORKDIR /kubespray
+
 RUN apt update -y && \
   apt install -y sudo \
   libssl-dev python-dev sshpass apt-transport-https \
-  ca-certificates curl gnupg2 software-properties-common python-pip
+  ca-certificates curl gnupg2 software-properties-common python-pip openshift
+
 RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - && \
   add-apt-repository \
   "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
   $(lsb_release -cs) \
   stable" \
   && apt update -y && apt-get install docker-ce -y
+
 COPY . .
+
 RUN /usr/bin/python -m pip install pip -U && /usr/bin/python -m pip install -r kubespray/requirements.txt
+# Kubespray
+
 ENTRYPOINT [ "scripts/kubespray-entrypoint.sh" ]
