add curl to Dockerfile_kubespray

--- a/Dockerfile_kubespray
+++ b/Dockerfile_kubespray
@@ -1,5 +1,22 @@
 FROM ubuntu:16.04
 
+# Ubuntu Packages
+RUN apt update -y && \
+  apt install -y sudo \
+  libssl-dev python-dev sshpass apt-transport-https \
+  ca-certificates curl gnupg2 software-properties-common \
+  python-pip openshift curl
+# Ubuntu Packages
+
+# Docker
+RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - && \
+  add-apt-repository \
+  "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
+  $(lsb_release -cs) \
+  stable" \
+  && apt update -y && apt-get install docker-ce -y
+# Docker
+
 # Helm
 ARG HELM_VERSION=v2.12.3
 ENV HELM_URL https://storage.googleapis.com/kubernetes-helm/helm-${HELM_VERSION}-linux-amd64.tar.gz
@@ -14,18 +31,6 @@ RUN curl -Lo /tmp/helm.tar.gz ${HELM_URL} \
 RUN mkdir /kubespray
 
 WORKDIR /kubespray
-
-RUN apt update -y && \
-  apt install -y sudo \
-  libssl-dev python-dev sshpass apt-transport-https \
-  ca-certificates curl gnupg2 software-properties-common python-pip openshift
-
-RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - && \
-  add-apt-repository \
-  "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
-  $(lsb_release -cs) \
-  stable" \
-  && apt update -y && apt-get install docker-ce -y
 
 COPY . .
 
