--- a/roles/kube/tasks/main.yml
+++ b/roles/kube/tasks/main.yml
@@ -1,3 +1,12 @@
+- name: Check Kube Config
+    stat:
+      path: ~/.kube/config
+    register: kube_config
+
+- fail:
+    msg: "Kube config is not found at '~/.kube/config'"
+  when: kube_config.stat.exists == False
+
 - name: Get Helm Tiller Status
   k8s_facts:
     kind: Deployment
