--- a/roles/kube/tasks/main.yml
+++ b/roles/kube/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: Check kube config in ansible artifact dir
   stat:
-    path: {{ artifacts_dir }}/admin.conf
+    path: "{{ artifacts_dir }}/admin.conf"
   register: kube_config_in_ansible
 
 - debug:
@@ -19,8 +19,8 @@
   when: (kube_config_in_home.stat.exists == False and kube_config_in_ansible.stat.exists == False)
 
 - file:
-    src: '{{ kube_config_in_ansible }}'
-    dest: '{{ kube_config_in_home }}'
+    src: "{{ kube_config_in_ansible }}"
+    dest: "{{ kube_config_in_home }}"
   when: kube_config_in_home.stat.exists == False
 
 - name: Get helm tiller status
