--- a/roles/kube/tasks/main.yml
+++ b/roles/kube/tasks/main.yml
@@ -18,10 +18,12 @@
     msg: "Kube config is not found in both '~/.kube/config' and /kubespray/artifacts/admin.conf"
   when: (kube_config_in_home.stat.exists == False and kube_config_in_ansible.stat.exists == False)
 
-- file:
+- name: Create kube config link from ansible artifacts to user home
+  file:
     src: "{{ kube_config_in_ansible }}"
     dest: "{{ kube_config_in_home }}"
     state: link
+    force: true
   when: kube_config_in_home.stat.exists == False
 
 - name: Get helm tiller status
