--- a/roles/kube/tasks/main.yml
+++ b/roles/kube/tasks/main.yml
@@ -1,6 +1,7 @@
-vars:
-  kube_config_in_home_path: ~/.kube/config
-  kube_config_in_ansible_artifacts_path: /kubespray/artifacts/admin.conf
+- name: Define kube config variables
+  vars:
+    kube_config_in_home_path: ~/.kube/config
+    kube_config_in_ansible_artifacts_path: /kubespray/artifacts/admin.conf
 
 - name: Check kube config in user home
   stat:
@@ -13,8 +14,8 @@ vars:
   register: kube_config_in_ansible_stat
 
 #remove
-  - debug:
-    var: kube_config_in_home
+- debug:
+  var: kube_config_in_home
 
 - debug:
     var: kube_config_in_ansible
