--- a/roles/kube/tasks/main.yml
+++ b/roles/kube/tasks/main.yml
@@ -5,12 +5,12 @@
 
 - name: Check kube config in user home
   stat:
-    path: {{ kube_config_in_home_path }}
+    path: "{{ kube_config_in_home_path }}"
   register: kube_config_in_home_stat
 
 - name: Check kube config in ansible artifacts dir
   stat:
-    path: {{ kube_config_in_ansible_artifacts_path }}
+    path: "{{ kube_config_in_ansible_artifacts_path }}"
   register: kube_config_in_ansible_stat
 
 #remove
