--- a/roles/kube/tasks/main.yml
+++ b/roles/kube/tasks/main.yml
@@ -10,21 +10,21 @@
 
 #remove
 - debug:
-    var: kube_config_in_home
+    var: kube_config_in_home_stat
 
 - debug:
-    var: kube_config_in_ansible
+    var: kube_config_in_ansible_stat
 #remove
 
 - fail:
     msg: "Kube config is not found in both '{{ kube_config_in_home_path }}' and {{ kube_config_in_ansible_artifacts_path }}"
-  when: (kube_config_in_home.stat.exists == False and kube_config_in_ansible.stat.exists == False)
+  when: (kube_config_in_home_stat.stat.exists == False and kube_config_in_ansible_stat.stat.exists == False)
 
 - name: Copy kube config from ansible artifacts to user home
   copy:
     src: "{{ kube_config_in_ansible_artifacts_path }}"
     dest: "{{ kube_config_in_home_path }}"
-  when: (kube_config_in_home.stat.exists == False and kube_config_in_ansible.stat.exists == True)
+  when: (kube_config_in_home_stat.stat.exists == False and kube_config_in_ansible_stat.stat.exists == True)
 
 - name: Get helm tiller status
   k8s_facts:
