--- a/roles/kube/defaults/main.yml
+++ b/roles/kube/defaults/main.yml
@@ -2,5 +2,6 @@ namespace_name: default
 # absent | present
 namespace_state: present
 
-kube_config_in_home_path: ~/.kube/config
+kube_dir_in_home_path: ~/.kube
+kube_config_in_home_path: {{ kube_dir_in_home_path }}/config
 kube_config_in_ansible_artifacts_path: /kubespray/artifacts/admin.conf
