--- a/roles/kube/tasks/main.yml
+++ b/roles/kube/tasks/main.yml
@@ -16,9 +16,15 @@
     var: kube_config_in_ansible_stat
 #remove
 
-- fail:
+- name: Fail if no kube config found
+  fail:
     msg: "Kube config is not found in both '{{ kube_config_in_home_path }}' and {{ kube_config_in_ansible_artifacts_path }}"
   when: (kube_config_in_home_stat.stat.exists == False and kube_config_in_ansible_stat.stat.exists == False)
+
+- name: Make sure destination kube directory in user home exists
+  file:
+    path: "{{ kube_dir_in_home_path }}"
+    state: directory
 
 - name: Copy kube config from ansible artifacts to user home
   copy:
