--- a/roles/kube/tasks/main.yml
+++ b/roles/kube/tasks/main.yml
@@ -8,26 +8,18 @@
     path: "{{ kube_config_in_ansible_artifacts_path }}"
   register: kube_config_in_ansible_stat
 
-- name: Check kube config in user custom directory
-  stat:
-    path: "{{ kube_config_in_user_custom_dir_path }}"
-  register: kube_config_in_user_custom_dir_path_stat
-
 #remove
 - debug:
     var: kube_config_in_home_stat
 
 - debug:
     var: kube_config_in_ansible_stat
-
-- debug:
-    var: kube_config_in_user_custom_dir_path_stat
 #remove
 
 - name: Fail if no kube config found
   fail:
     msg: "Kube config is not found in both '{{ kube_config_in_home_path }}' and {{ kube_config_in_ansible_artifacts_path }}"
-  when: (kube_config_in_home_stat.stat.exists == False and kube_config_in_ansible_stat.stat.exists == False and kube_config_in_user_custom_dir_path_stat.stat.exists == False)
+  when: (kube_config_in_home_stat.stat.exists == False and kube_config_in_ansible_stat.stat.exists == False)
 
 - name: Make sure destination kube directory in user home exists
   file:
@@ -39,12 +31,6 @@
     src: "{{ kube_config_in_ansible_artifacts_path }}"
     dest: "{{ kube_config_in_home_path }}"
   when: (kube_config_in_home_stat.stat.exists == False and kube_config_in_ansible_stat.stat.exists == True)
-
-- name: Copy kube config from user custom directory to user home
-  copy:
-    src: "{{ kube_config_in_user_custom_dir_path }}"
-    dest: "{{ kube_config_in_home_path }}"
-  when: (kube_config_in_home_stat.stat.exists == False and kube_config_in_user_custom_dir_path_stat.stat.exists == True)
 
 - name: Get helm tiller status
   k8s_facts:
