fixing kube dashboard names

--- a/roles/kube/tasks/dashboard.yml
+++ b/roles/kube/tasks/dashboard.yml
@@ -7,7 +7,7 @@
   command: >
     helm install stable/kubernetes-dashboard 
     --namespace kube-system
-    --name kube-dashboard
+    --name kubernetes-dashboard
     --version 1.2.0
     -f -
   args:
