fixing nginx ingress controller helm names

--- a/roles/kube/tasks/nginx-ingress-controller.yml
+++ b/roles/kube/tasks/nginx-ingress-controller.yml
@@ -7,7 +7,7 @@
   command: >
     helm install stable/nginx-ingress
     --namespace kube-system
-    --name nic
+    --name nginx-ingress
     -f -
   args:
     stdin: |
