--- a/roles/kube/tasks/nginx-ingress-controller.yml
+++ b/roles/kube/tasks/nginx-ingress-controller.yml
@@ -8,13 +8,16 @@
     helm install stable/nginx-ingress
     --namespace kube-system
     --name nginx-ingress
+    --version 1.3.1
     -f -
   args:
     stdin: |
       controller:
-        config:
-          ssl-redirect: "false"
+        replicaCount: 2
         service:
           type: NodePort
+          nodePorts:
+            http: 32189
+        stats:
+          enabled: true
   when: "'nginx-ingress' not in helm_list_results.stdout"
-  # do prod params, pin nic version
