run nfs docker container

--- a/nfs-server.yml
+++ b/nfs-server.yml
@@ -1,5 +1,6 @@
 - hosts: nfs-server
   gather_facts: false
   roles:
-    - { role: kubespray/roles/bootstrap-os }
-    - { role: kubespray/roles/container-engine }
+    - role: kubespray/roles/bootstrap-os
+    - role: kubespray/roles/container-engine
+    - role: nfs
