--- a/master_playbook.yml
+++ b/master_playbook.yml
@@ -1,3 +1,5 @@
 - import_playbook: kubespray/cluster.yml
 - import_playbook: kube.yml
   tags: always
+- import_playbook: nfs-server.yml
+  tags: always
