actualize hosts.ini

--- a/hosts.ini
+++ b/hosts.ini
@@ -1,20 +1,23 @@
 [kube-master]
-10.142.0.14
-10.142.0.15
-10.142.0.16
+10.100.20.102
+10.100.20.103
+10.100.20.104
 
 [etcd]
-10.142.0.14
-10.142.0.15
-10.142.0.16
+10.100.20.102
+10.100.20.103
+10.100.20.104
 
 [kube-node]
-10.142.0.17
-10.142.0.18
+10.100.20.105
+10.100.20.106
 
 [k8s-cluster:children]
 kube-master
 kube-node
 
+[k8s-cluster:vars]
+node_labels={"environment":"prod"}
+
 [nfs-server]
-10.142.0.21
+10.100.20.106
