heapster fix, docker registry cert + secret and namespace playbooks, some nfs stuff, new jenkins

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 stdout_callback=yaml
 host_key_checking=no
-inventory=hosts.ini
+inventory=hosts.yml
 
 library = kubespray/library
 roles_path = roles:kubespray/roles
