--- a/misc/nginx/10.10.30.42/kube_dev_in.conf
+++ b/misc/nginx/10.10.30.42/kube_dev_in.conf
@@ -40,6 +40,35 @@ server {
 server {
     listen 443 ssl;
 
+    server_name .kube-dev.in.alutech24.com;
+
+    ssl_certificate /etc/nginx/certs/alutech24_com_2019_07_10.crt;
+    ssl_certificate_key /etc/nginx/certs/alutech24_com_2019_07_10_private.key;
+
+    proxy_send_timeout 600s;
+    proxy_read_timeout 600s;
+    proxy_connect_timeout 600;
+
+    access_log /var/log/nginx/kube-dev.in.alutech24.access.log main;
+    error_log /var/log/nginx/kube-dev.in.alutech24.error.log;
+
+    location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://kube_dev_in;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X_Forwarded_proto $scheme;
+
+            # ------- WS ----------
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+    }
+}
+
+server {
+    listen 443 ssl;
+
     server_name dashboard.kube-dev.in.alutech24.com;
 
     ssl_certificate /etc/nginx/certs/alutech24_com_2019_07_10.crt;
