make 101 node host etcd; pin jenkins version

--- a/roles/kube/tasks/jenkins.yml
+++ b/roles/kube/tasks/jenkins.yml
@@ -127,7 +127,8 @@
     -f -
   args:
     stdin: |
-      master: 
+      master:
+        imageTag: 2.164 
         serviceType: ClusterIP
         ingress: 
           enabled: true
