ssh keys automation, playbook helper scripts

--- a/Dockerfile_kubespray
+++ b/Dockerfile_kubespray
@@ -5,7 +5,7 @@ RUN apt update -y && \
   apt install -y sudo \
   libssl-dev python-dev sshpass apt-transport-https \
   ca-certificates curl gnupg2 software-properties-common \
-  python-pip curl
+  python-pip curl sshpass
 # Ubuntu Packages
 
 # Docker
