--- a/roles/kube/tasks/service-accounts-for-the-team.yml
+++ b/roles/kube/tasks/service-accounts-for-the-team.yml
@@ -81,3 +81,30 @@
         - kind: ServiceAccount
           name: pavel-mikhalchuk
           namespace: default
+
+- name: Create service account for Gleb Khrakhotkin
+  k8s:
+    state: "present"
+    definition:
+      apiVersion: v1
+      kind: ServiceAccount
+      metadata:
+        name: gleb-krakhotkin
+        namespace: default
+
+- name: Grant Gleb Khrakhotkin a read-only role
+  k8s:
+    state: "present"
+    definition:
+      apiVersion: rbac.authorization.k8s.io/v1
+      kind: ClusterRoleBinding
+      metadata:
+        name: gleb-krakhotkin-view-user
+      roleRef:
+        apiGroup: rbac.authorization.k8s.io
+        kind: ClusterRole
+        name: view
+      subjects:
+        - kind: ServiceAccount
+          name: gleb-krakhotkin
+          namespace: default
