--- a/roles/kube/tasks/sentry.yml
+++ b/roles/kube/tasks/sentry.yml
@@ -3,10 +3,12 @@
     helm install stable/sentry
     --namespace logging
     --name sentry
-    --version 2.0.1
+    --version 2.0.0
     -f -
   args:
     stdin: |
+      image:
+        tag: "9.0"
       worker:
         replicacount: 1
       service:
@@ -17,6 +19,7 @@
             enabled: true
             storageClass: "sentry-storage"
       postgresql:
+        imageTag: "9.5"
         persistence:
           enabled: true
           storageClass: "sentry-storage"
