--- a/kube-logging/cluster-state/sentry/values.yaml
+++ b/kube-logging/cluster-state/sentry/values.yaml
@@ -10,17 +10,17 @@ super-sentry:
       filesystem:
         persistence:
           enabled: true
-          storageClass: "sentry-storage"
+          # storageClass: "sentry-storage"
     postgresql:
       imageTag: "9.5"
       persistence:
         enabled: true
-        storageClass: "sentry-storage"
+        # storageClass: "sentry-storage"
     redis:
       master:
         persistence:
           enabled: true
-          storageClass: "sentry-storage"
+          # storageClass: "sentry-storage"
     ingress:
       enabled: true
       hostname: "sentry.{{ base_domain }}"
