fix pvc for sentry

--- a/kube-logging/cluster-state/sentry/values.yaml
+++ b/kube-logging/cluster-state/sentry/values.yaml
@@ -10,17 +10,20 @@ sentry:
       persistence:
         enabled: true
         storageClass: "sentry-storage"
+        size: 2Gi
   postgresql:
     imageTag: "9.5"
     persistence:
       enabled: true
       storageClass: "sentry-storage"
+      size: 2Gi
       resourcePolicy: "nil"
   redis:
     master:
       persistence:
         enabled: true
         storageClass: "sentry-storage"
+        size: 2Gi
   ingress:
     enabled: true
     hostname: "sentry.logging.in.alutech24.com"
