ansible playbook for kube local storage folders; debugging sentry deployment

--- a/kube-logging/cluster-state/app-of-apps/apps/sentry.yml
+++ b/kube-logging/cluster-state/app-of-apps/apps/sentry.yml
@@ -14,6 +14,8 @@ spec:
     repoURL: https://github.com/pavel-mikhalchuk/kubespray-sandbox
     targetRevision: HEAD
     path: kube-logging/cluster-state/sentry
+    helm: 
+      releaseName: sentry-wip-001
   syncPolicy:
     automated:
       prune: true
