get sentry back

--- a/kube-logging/cluster-state/app-of-apps/apps/sentry.yml
+++ b/kube-logging/cluster-state/app-of-apps/apps/sentry.yml
@@ -1,22 +1,22 @@
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: sentry
-#   namespace: argocd
-#   finalizers:
-#   - resources-finalizer.argocd.argoproj.io
-# spec:
-#   destination:
-#     namespace: default
-#     server: https://kubernetes.default.svc
-#   project: default
-#   source:
-#     repoURL: https://github.com/pavel-mikhalchuk/kubespray-sandbox
-#     targetRevision: HEAD
-#     path: kube-logging/cluster-state/sentry
-#     helm: 
-#       releaseName: sentry-wip-001
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: sentry
+  namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
+spec:
+  destination:
+    namespace: default
+    server: https://kubernetes.default.svc
+  project: default
+  source:
+    repoURL: https://github.com/pavel-mikhalchuk/kubespray-sandbox
+    targetRevision: HEAD
+    path: kube-logging/cluster-state/sentry
+    helm: 
+      releaseName: sentry-wip-001
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
