fixing out of sync postgresql

--- a/kube-logging/cluster-state/sentry/values.yaml
+++ b/kube-logging/cluster-state/sentry/values.yaml
@@ -13,6 +13,7 @@ sentry:
         size: 2Gi
   postgresql:
     imageTag: "9.5"
+    imagePullPolicy: IfNotPresent
     persistence:
       enabled: true
       storageClass: "sentry-storage"
