--- a/kube-logging/cluster-bootstrap/ansible/roles/argocd/tasks/main.yml
+++ b/kube-logging/cluster-bootstrap/ansible/roles/argocd/tasks/main.yml
@@ -13,11 +13,11 @@
 - name: Register Argo CD App of Apps
   command: kubectl apply -n argocd -f /tmp/infra-git-repo/kube-logging/cluster-state/app-of-apps/app.yml
 
-# - name: Install Argo CD CLI
-#   get_url:
-#     url: https://github.com/argoproj/argo-cd/releases/download/v1.1.2/argocd-linux-amd64
-#     dest: /usr/bin/argocd
-#     mode: '0755'
+- name: Install Argo CD CLI
+  get_url:
+    url: https://github.com/argoproj/argo-cd/releases/download/v1.1.2/argocd-linux-amd64
+    dest: /usr/bin/argocd
+    mode: '0755'
 
 # - name: Get password for Argo CD login
 #   shell: kubectl get pods -n argocd -l app.kubernetes.io/name=argocd-server -o name | cut -d'/' -f 2
