--- a/kube-logging/cluster-state/sentry/templates/storage.yaml
+++ b/kube-logging/cluster-state/sentry/templates/storage.yaml
@@ -12,7 +12,7 @@ metadata:
   name: sentry-pv-1
 spec:
   capacity:
-    storage: 2Gi
+    storage: 10Gi
   volumeMode: Filesystem
   accessModes:
   - ReadWriteOnce
@@ -27,7 +27,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - master
+          - asvc-tst-log
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -35,7 +35,7 @@ metadata:
   name: sentry-pv-2
 spec:
   capacity:
-    storage: 2Gi
+    storage: 10Gi
   volumeMode: Filesystem
   accessModes:
   - ReadWriteOnce
@@ -50,7 +50,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - master
+          - asvc-tst-log
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -58,7 +58,7 @@ metadata:
   name: sentry-pv-3
 spec:
   capacity:
-    storage: 2Gi
+    storage: 10Gi
   volumeMode: Filesystem
   accessModes:
   - ReadWriteOnce
@@ -73,4 +73,4 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - master
+          - asvc-tst-log
